add saving and loading of vocabulary and counter