@@ -6,6 +6,7 @@ import com.intellij.completion.ngram.slp.counting.trie.ArrayTrieCounter;
 import com.intellij.completion.ngram.slp.modeling.ngram.JMModel;
 import com.intellij.completion.ngram.slp.modeling.ngram.NGramModel;
 import com.intellij.completion.ngram.slp.translating.Vocabulary;
+import com.intellij.completion.ngram.slp.translating.VocabularyRunner;
 import com.intellij.ide.highlighter.JavaFileType;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.project.Project;
@@ -16,13 +17,17 @@ import com.intellij.psi.search.FileTypeIndex;
 import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.psi.search.searches.ReferencesSearch;
 import com.intellij.util.ObjectUtils;
+import com.intellij.util.ResourceUtil;
 import kotlin.Pair;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.id.names.suggesting.IdNamesSuggestingBundle;
 import org.jetbrains.id.names.suggesting.Prediction;
+import org.jetbrains.id.names.suggesting.VocabularyManager;
 import org.jetbrains.id.names.suggesting.api.IdNamesSuggestingModelRunner;
 
+import java.io.*;
 import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -39,7 +44,7 @@ public class IdNamesNGramModelRunner implements IdNamesSuggestingModelRunner {
     }
 
     private final NGramModel myModel;
-    private final Vocabulary myVocabulary = new Vocabulary();
+    private Vocabulary myVocabulary = new Vocabulary();
     private final HashSet<Integer> myRememberedVariables = new HashSet<>();
 
     public IdNamesNGramModelRunner(boolean isLargeCorpora) {
@@ -55,41 +60,41 @@ public class IdNamesNGramModelRunner implements IdNamesSuggestingModelRunner {
         if (!isSupported(identifierOwner)) {
             return new ArrayList<>();
         }
-        List<List<Integer>> allUsageNGramIndicies = findUsageNGramIndicies(identifierOwner);
-        allUsageNGramIndicies.forEach(this::forgetUsage);
-        List<Prediction> predictionList = allUsageNGramIndicies
+        List<List<Integer>> allUsageNGramIndices = findUsageNGramIndices(identifierOwner);
+        allUsageNGramIndices.forEach(this::forgetUsage);
+        List<Prediction> predictionList = allUsageNGramIndices
                 .stream()
                 .flatMap(usage -> predictUsageName(usage, getIdTypeFilter(identifierOwner)))
                 .sorted((p1, p2) -> -Double.compare(p1.getProbability(), p2.getProbability()))
                 .distinct()
                 .limit(PREDICTION_CUTOFF)
                 .collect(Collectors.toList());
-        allUsageNGramIndicies.forEach(this::learnUsage);
+        allUsageNGramIndices.forEach(this::learnUsage);
         return predictionList;
     }
 
-    private List<List<Integer>> findUsageNGramIndicies(PsiNameIdentifierOwner identifierOwner) {
+    private List<List<Integer>> findUsageNGramIndices(PsiNameIdentifierOwner identifierOwner) {
         Stream<PsiReference> elementUsages = findReferences(identifierOwner);
         return Stream.concat(Stream.of(identifierOwner), elementUsages)
                 .map(IdNamesNGramModelRunner::getIdentifier)
                 .filter(Objects::nonNull)
-                .map(this::getNGramIndicies)
+                .map(this::getNGramIndices)
                 .collect(Collectors.toList());
     }
 
-    public static Stream<PsiReference> findReferences(@NotNull PsiNameIdentifierOwner identifierOwner){
+    public static Stream<PsiReference> findReferences(@NotNull PsiNameIdentifierOwner identifierOwner) {
         return ReferencesSearch.search(identifierOwner)
                 .findAll()
                 .stream();
     }
 
     private Stream<Prediction> predictUsageName(@NotNull List<Integer> usageNGramIndicies,
-                                                           @NotNull Predicate<Map.Entry<Integer, ?>> idTypeFilter) {
+                                                @NotNull Predicate<Map.Entry<Integer, ?>> idTypeFilter) {
         return myModel.predictToken(usageNGramIndicies, myModel.getOrder() - 1)
-                      .entrySet()
-                      .stream()
-                      .filter(idTypeFilter)
-                      .map(e -> new Prediction(e.getKey(), myVocabulary.toWord(e.getKey()), toProb(e.getValue())));
+                .entrySet()
+                .stream()
+                .filter(idTypeFilter)
+                .map(e -> new Prediction(myVocabulary.toWord(e.getKey()), toProb(e.getValue())));
     }
 
     private void forgetUsage(@NotNull List<Integer> usageNGramIndicies) {
@@ -116,7 +121,7 @@ public class IdNamesNGramModelRunner implements IdNamesSuggestingModelRunner {
         return ObjectUtils.tryCast(element, PsiIdentifier.class);
     }
 
-    private List<Integer> getNGramIndicies(@NotNull PsiElement element) {
+    private List<Integer> getNGramIndices(@NotNull PsiElement element) {
         return myVocabulary.toIndices(getNGram(element));
     }
 
@@ -139,7 +144,7 @@ public class IdNamesNGramModelRunner implements IdNamesSuggestingModelRunner {
     public void learnProject(@NotNull Project project, @NotNull ProgressIndicator progressIndicator) {
         progressIndicator.setIndeterminate(false);
         Collection<VirtualFile> files = FileTypeIndex.getFiles(JavaFileType.INSTANCE,
-                                                               GlobalSearchScope.projectScope(project));
+                GlobalSearchScope.projectScope(project));
         double progress = 0;
         final double total = files.size();
         for (VirtualFile file : files) {
@@ -154,14 +159,14 @@ public class IdNamesNGramModelRunner implements IdNamesSuggestingModelRunner {
 
     private List<String> lexPsiFile(@NotNull PsiFile file) {
         return SyntaxTraverser.psiTraverser()
-                              .withRoot(file)
-                              .onRange(new TextRange(0, 64 * 1024)) // first 128 KB of chars
-                              .filter(IdNamesNGramModelRunner::shouldLex)
-                              .toList()
-                              .stream()
-                              .peek(this::rememberIdName)
-                              .map(PsiElement::getText)
-                              .collect(Collectors.toList());
+                .withRoot(file)
+                .onRange(new TextRange(0, 64 * 1024)) // first 128 KB of chars
+                .filter(IdNamesNGramModelRunner::shouldLex)
+                .toList()
+                .stream()
+                .peek(this::rememberIdName)
+                .map(PsiElement::getText)
+                .collect(Collectors.toList());
     }
 
     private void rememberIdName(PsiElement element) {
@@ -172,8 +177,8 @@ public class IdNamesNGramModelRunner implements IdNamesSuggestingModelRunner {
 
     private static boolean shouldLex(@NotNull PsiElement element) {
         return element.getFirstChild() == null // is leaf
-               && !StringUtils.isBlank(element.getText())
-               && !(element instanceof PsiComment);
+                && !StringUtils.isBlank(element.getText())
+                && !(element instanceof PsiComment);
     }
 
     private double toProb(@NotNull Pair<Double, Double> probConf) {
@@ -182,11 +187,32 @@ public class IdNamesNGramModelRunner implements IdNamesSuggestingModelRunner {
         return prob * conf + (1 - conf) / myVocabulary.size();
     }
 
-    public void save(){
-        // Not implemented yet
+    public void save() {
+        try {
+            FileOutputStream fileOutputStream = new FileOutputStream(IdNamesSuggestingBundle.message("counter.path"));
+            ObjectOutputStream objectOutputStream = new ObjectOutputStream(fileOutputStream);
+            myModel.getCounter().writeExternal(objectOutputStream);
+            objectOutputStream.close();
+
+            File vocabularyFile = new File(IdNamesSuggestingBundle.message("vocabulary.path"));
+            VocabularyRunner.INSTANCE.write(myVocabulary, vocabularyFile);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
     }
 
-    public void load(){
-        // Not implemented yet
+    public void load() {
+        File file = new File(IdNamesSuggestingBundle.message("vocabulary.path"));
+        if (file.exists()) {
+            myVocabulary = VocabularyManager.read(file);
+        }
+
+        try {
+            FileInputStream fileInputStream = new FileInputStream(IdNamesSuggestingBundle.message("counter.path"));
+            ObjectInputStream objectInputStream = new ObjectInputStream(fileInputStream);
+            myModel.getCounter().readExternal(objectInputStream);
+        } catch (IOException | ClassNotFoundException e) {
+            e.printStackTrace();
+        }
     }
 }
